// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with error 1`] = `
<div
  className=" TextInput-container-0-1-1 undefined"
>
  <label>
    some label
  </label>
  <input
    className="TextInput-input-0-1-3 TextInput-inputError-0-1-4"
    id="123"
    onChange={[Function]}
    type="text"
    value="some value"
  />
  <div
    className="TextInput-error-0-1-2"
  >
    some error
     
  </div>
</div>
`;

exports[`renders correctly without error 1`] = `
<div
  className=" TextInput-container-0-1-1 undefined"
>
  <label>
    some label
  </label>
  <input
    className="TextInput-input-0-1-3 "
    id="123"
    onChange={[Function]}
    type="text"
    value="some value"
  />
  <div
    className="TextInput-error-0-1-2"
  >
    
     
  </div>
</div>
`;
